# linux-image-burner

./: .gitignore  CMakeLists.txt  HELP.md  LICENSE  README.md  STATUS.md  STRUCTURE.md  build.sh  demo.sh  github-setup.sh  install.sh  linux-image-burner.desktop  org.linuxburner.image-burner.policy  test.sh  test_burn.sh  test_uninstall.sh  uninstall.sh
src/: main.cpp
src/core/: Burner.cpp  Burner.h  DeviceManager.cpp  DeviceManager.h  FileSystemManager.cpp  FileSystemManager.h  ImageHandler.cpp  ImageHandler.h
src/ui/: DeviceInfoDialog.cpp  DeviceInfoDialog.h  DeviceInfoDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui
src/utils/: Utils.cpp  Utils.h  Validation.cpp  Validation.h
